[package]
name = "roto-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
rodio = "0.14.0"
pv_recorder = "1.0.1"
termion = "1.5.5"
log = "0.4"
hound = "3.4.0"
ctrlc = "3.1.9"
clap = "2.33.3"